# calmecac

./: .gitignore  CLAUDE.md  FINDING_DRAFT.md  NOTES.md  README.md  config.yaml  pyproject.toml
agents/kukulkan/: prompt.md
evals/: MULTI_TURN_PROPOSAL.md  README.md  checks.py  run.py
evals/cases/: PROPOSED_multi_turn.md  batch-15-files-sufficient-budget.yaml  batch-15-files.yaml  hello-baseline.yaml  swallow-canary.yaml  tricky-quotes.yaml  weather-decline.yaml
evals/results/: results_20260712T002611Z.json  results_20260712T005333Z.json  results_20260712T010029Z.json  results_20260712T010438Z.json  results_20260712T223223Z.json  results_20260712T224105Z.json  results_20260712T225211Z.json  results_20260712T230253Z.json  results_20260713T001225Z.json  results_20260714T235702Z.json
harness/: discord_gateway.py  history.py  loop.py  ollama_client.py  run.py  smoke.py  tools.py
scripts/: ablation_probe.py  flake_system_prompt.txt  probe_flake.py  raw_probe.py  trigger_test.py
skills/: README.md
skills/estimate-before-batch/: SKILL.md
skills/write-and-verify-code/: SKILL.md
