[project]
name = "calmecac"
version = "0.1.0"
description = "From-scratch LLM agent harness"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]
